# wasm

./: CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
wasm_tob/: __init__.py  compat.py  formatter.py  opcodes.py  types.py
