[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wasm-tob"
dynamic = ["version"]
description = "WebAssembly decoder & disassembler"
readme = "README.md"
keywords = [ "wasm", "disassembler", "decoder" ]
license = { file = "LICENSE" }
authors = [
    { name = "Trail of Bits", email = "opensource@trailofbits.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Security",
]
dependencies = [ ]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://pypi.org/project/wasm-tob/"
Issues = "https://github.com/trail-of-forks/wasm-tob/issues"
Source = "https://github.com/trail-of-forks/wasm-tob"

[project.scripts]
wasmdump = "wasm_tob.__main__:dump"

[project.optional-dependencies]
dev = [
  "build",
]
